[package]
name = "two-sided-vec"
version = "0.2.0"
authors = [
    "Techcable <Techcable@techcable.net>",
    "Victor Koenders <git@trang.ar>",
]
description = "Double ended vectors for rust, which can grow in both the front and back"
repository = "https://github.com/VictorKoenders/TwoSidedVec"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = { version = "1.0" }
